--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ElecDarker</title>
+  <title>Weakmat</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300">
 </head>
 <body>
-  <dark-root></dark-root>
+  <app-root></app-root>
 </body>
 </html>
