--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <link href="https://fonts.googleapis.com/css?family=Sunflower:300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Manrope&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Hind+Madurai:500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
 
   <!-- icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
